--- a/backend/package.json
+++ b/backend/package.json
@@ -24,11 +24,15 @@
         "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.0.0",
         "@nestjs/jwt": "^10.0.2",
+        "@nestjs/mapped-types": "*",
         "@nestjs/passport": "^9.0.3",
         "@nestjs/platform-express": "^9.0.0",
+        "@nestjs/platform-socket.io": "^9.3.10",
         "@nestjs/swagger": "^6.2.1",
         "@nestjs/typeorm": "^9.0.1",
+        "@nestjs/websockets": "^9.3.10",
         "bcrypt": "^5.1.0",
+        "child_process": "^1.0.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.0",
         "passport": "^0.6.0",
