--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
         "@types/jest": "^27.0.1",
         "@types/node": "^16.7.13",
         "react": "^18.2.0",
+        "react-countdown": "^2.3.5",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.9.0",
         "react-scripts": "5.0.1",
